src/styles/main.css
.canvas-container {
  position: relative;
  margin: 16px 0;
  width: 100%;
  max-width: 500px;
  aspect-ratio: 5 / 4;
}

.static-canvas,
.dynamic-canvas {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
}

.toggle-button {
  border: none;
  padding: 10px 0;
  width: 76px;
}

:is(.toggle-button, .curve-picker, .duration > button) {
  text-transform: capitalize;
  background-color: var(--button-bg);
  font-size: 15px;
  border-radius: 5px;
  cursor: pointer;
  color: var(--text-light);
  transition:
    background-color 0.3s,
    border-color 0.3s;
}

:is(.toggle-button, .curve-picker, .duration > button):hover {
  background-color: var(--button-hover);
}

:is(.toggle-button, .curve-picker, .duration > button):active {
  opacity: 0.8;
}

.controls {
  display: flex;
  justify-content: center;
  gap: 12px;
}

.curve-title {
  margin: 0 0 8px;
  padding: 0;
  text-transform: capitalize;
}

.curve-picker {
  -webkit-appearance: none;
  appearance: none;

  background-color: var(--input-bg);
  padding: 10px 35px 10px 15px; /* 오른쪽은 화살표 공간 확보 */
  border: 1px solid var(--border-light); /* 은은한 테두리 */

  /* 커스텀 드롭다운 화살표 (SVG 인코딩) */
  background-image: url("/public/icons/chevron-down.svg");
  background-repeat: no-repeat;
  background-position: right 10px center;
  background-size: 1.1rem;
}

.progress {
  font-weight: 600;
  color: var(--accent);
  transition: transform 0.2s ease-in-out;
}

.main-header {
  position: absolute;
  top: 16px;
  right: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 12px;
}

.onboard-button {
  border: none;
  background: none;
  cursor: pointer;
  padding: 0;
  margin: 0;

  & > img {
    width: 26px;
    height: 26px;
  }
}

.github-link > img {
  width: 24px;
  height: 24px;
}

.duration {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 4px;
}

.duration-display {
  border: 1px solid var(--border-dark);
  padding: 8px 0;
  border-radius: 5px;
  width: 48px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 15px;
}

.duration > button {
  border: none;
  padding: 10px;
  display: grid;
  place-items: center;
}

.duration > button:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.progress,
.control-points {
  font-family: "Source Code Pro", Consolas, monospace;
  font-style: italic;
}

.control-points {
  padding-top: 20px;
  font-size: 12px;
  color: dimgray;
  display: grid;
  gap: 6px;

  grid-template-columns: repeat(2, minmax(98px, 1fr)); /* 2개의 컬럼을 동일 비율(1:1)로 배치 */
  grid-template-rows: repeat(3, 1em); /* 각 행의 높이를 1em 으로 지정하고 총 3행 생성 */

  & span {
    transition: color 0.1s ease-in-out;
  }
}

.css-output-container {
  padding-top: 8px;
  width: min(100%, 348px);
  position: relative;
}

.css-output {
  font-family: "Source Code Pro", Consolas, monospace;
  font-size: 14px;
  color: var(--accent);
  background-color: var(--input-bg);
  border: 1px solid var(--border-light);
  border-radius: 5px;
  padding: 10px 4px;
  user-select: none;
  display: block;
  cursor: pointer;
  text-align: center;
  transition: background-color 0.2s ease-in-out;
  &:hover {
    background-color: var(--button-hover);
  }
  &:focus-visible {
    outline: 2px solid var(--accent);
    outline-offset: 2px;
  }
}

.css-copied-indicator {
  display: block;
  font-size: 12px;
  color: var(--accent);
  opacity: 0;
  transition: opacity 300ms;
  pointer-events: none;
  padding-bottom: 4px;
}

